# hsc_bn-en_rag

./: Dockerfile  README.md  STEPS TO RUN APP.txt  app.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run.sh  start_app.ps1
data/processed/: chunks_a_output.jsonl  hybrid_output.jsonl
data/scripts/: chunk_plan_a.py  embed_and_upsert_qdrant.py  gemini_raw_extract.py
rag/: generator.py  models.py  retrieval.py
