[project]
name = "hsc-bn-en-rag"
version = "0.1.0"
description = ""

authors = [
    { name = "nafi-rahman", email = "nafirahman16@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-qdrant (>=0.2.0,<0.3.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "qdrant-client (>=1.15.0,<2.0.0)",
    "fastembed (>=0.7.1,<0.8.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "streamlit (>=1.47.1,<2.0.0)",
    "langchain-google-genai (>=2.1.8,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "rouge-score (>=0.1.2,<0.2.0)"
]

